--- a/app/src/main/res/xml/pref_general.xml
+++ b/app/src/main/res/xml/pref_general.xml
@@ -30,13 +30,19 @@
         android:positiveButtonText="@null"
         android:title="@string/pref_title_add_friends_to_messages" />
 
-
     <EditTextPreference
         android:title="@string/pref_location_label"
         android:key="@string/pref_location_key"
         android:defaultValue="@string/pref_location_default"
         android:inputType="text"
         android:singleLine="true" />
+
+    <ListPreference
+        android:title="@string/pref_units_label"
+        android:key="@string/prefs_unit_key"
+        android:entries="@array/prefs_units_options"
+        android:entryValues="@array/prefs_unit_values"
+        android:defaultValue="@string/pref_units_metric"/>
 
 
 </PreferenceScreen>
