--- a/app/src/main/res/layout/detail.xml
+++ b/app/src/main/res/layout/detail.xml
@@ -11,7 +11,6 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/detail_text"
-        android:text="Loading..."/>
+        android:id="@+id/detail_text"/>
 
 </android.support.constraint.ConstraintLayout>
